alpm-srcinfo/tests/parse_error_snapshots/invalid_property_delimiter.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "pkgbase = test\n\t# Delimiter should have spaces.\n\tpkgver=1.0.0\n\tpkgrel = 1\n"
expression: "format!(\"{error}\")"
---
File parsing error:
error: invalid delimiter
  | 
2 |  # Delimiter should have spaces.
3 |  pkgver=1.0.0
  |        ^ expected an equal sign surrounded by spaces: ' = '.
4 |  pkgrel = 1
  | 
  = while parsing:
    package_base_line: (pkgver=1.0.0)
    └ package base property: (pkgver=1.0.0)
      │ → invalid property type
      │ → expected one of the allowed pkgbase section properties:, `checkdepends`, `makedepends`, `pkgver`, `pkgrel`, `epoch`, `validpgpkeys`, `depends`, `optdepends`, `provides`, `conflicts`, `replaces`, `pkgdesc`, `url`, `license`, `arch`, `changelog`, `install`, `groups`, `options`, `backup`, `source`, `noextract`, `b2sums`, `md5sums`, `sha1sums`, `sha224sums`, `sha256sums`, `sha384sums`, `sha512sums`, `cksums`
      └ delimiter: (=1.0.0)
        → expected an equal sign surrounded by spaces: ' = '.
